--- a/resources/source/scss/style.scss
+++ b/resources/source/scss/style.scss
@@ -296,6 +296,7 @@
     color: white;
     border-bottom: 1px solid white;
     margin-bottom: 38px;
+    resize: none;
 
     &::placeholder {
         color: white;
@@ -312,6 +313,14 @@
     height: 53px;
     background-color: #6eeee4;
     border-radius: 1px;
+
+    &:hover {
+        background-color: #b3fef8;
+    }
+
+    &:active {
+        background-color: #67ccc4;
+    }
 }
 
 .contact__info {
@@ -328,4 +337,57 @@
     margin-top: 33px;
     width: 455px;
     height: 224px;
+}
+
+.footer {
+    padding: 93px 0 152px;
+    background-color: #68478d;
+    text-align: center;
+}
+
+.footer__container {
+    margin: 0 auto;
+}
+
+.footer__title {
+    font-size: 16px;
+    line-height: 25px;
+    letter-spacing: 0.16px;
+    color: #ffffff;
+}
+
+.footer__links {
+    margin-top: 10px;
+}
+
+.footer__links {
+    display: flex;
+    gap: 7px;
+    justify-content: center;
+}
+
+.footer__links > li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 46px;
+    height: 40px;
+    background-color: #50505066;
+    opacity: 0.7;
+
+    &:hover {
+        opacity: 1;
+    }
+
+    &:active {
+        background-color: #6eeee4;
+
+        svg {
+            fill: #000000;
+        }
+    }
+}
+
+.footer__links > li svg {
+    fill: #ffffff;
 }
