--- a/resources/source/css/style.css
+++ b/resources/source/css/style.css
@@ -204,8 +204,12 @@
 .employee {
   position: relative;
 }
+.employee:hover .employee__about {
+  display: block;
+}
 
 .employee__about {
+  display: none;
   position: absolute;
   width: calc(100% - 36px);
   bottom: 0;
@@ -278,9 +282,12 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 26px;
 }
 .contact__container > div {
   height: 460px;
@@ -290,61 +297,47 @@
 }
 
 .contact__feedback {
+  width: 100%;
+  max-width: 614px;
   padding: 47px 32px 38px;
-  margin-right: 26px;
+}
+
+.contact__input,
+.contact__message {
+  display: block;
+  background-color: transparent;
+  width: 100%;
+  font-size: 15px;
+  line-height: 51px;
+  color: white;
+  border-bottom: 1px solid white;
+}
+.contact__input::-webkit-input-placeholder, .contact__message::-webkit-input-placeholder {
+  color: white;
+}
+.contact__input::-moz-placeholder, .contact__message::-moz-placeholder {
+  color: white;
+}
+.contact__input:-ms-input-placeholder, .contact__message:-ms-input-placeholder {
+  color: white;
+}
+.contact__input::-ms-input-placeholder, .contact__message::-ms-input-placeholder {
+  color: white;
+}
+.contact__input::placeholder,
+.contact__message::placeholder {
+  color: white;
 }
 
 .contact__input {
-  width: 550px;
   height: 30px;
-  font-size: 15px;
-  line-height: 51px;
-  background-color: transparent;
-  color: white;
-  border-bottom: 1px solid white;
   margin-bottom: 30px;
-}
-.contact__input::-webkit-input-placeholder {
-  color: white;
-}
-.contact__input::-moz-placeholder {
-  color: white;
-}
-.contact__input:-ms-input-placeholder {
-  color: white;
-}
-.contact__input::-ms-input-placeholder {
-  color: white;
-}
-.contact__input::placeholder {
-  color: white;
 }
 
 .contact__message {
-  width: 550px;
   height: 105px;
-  font-size: 15px;
-  line-height: 51px;
-  background-color: transparent;
-  color: white;
-  border-bottom: 1px solid white;
   margin-bottom: 38px;
   resize: none;
-}
-.contact__message::-webkit-input-placeholder {
-  color: white;
-}
-.contact__message::-moz-placeholder {
-  color: white;
-}
-.contact__message:-ms-input-placeholder {
-  color: white;
-}
-.contact__message::-ms-input-placeholder {
-  color: white;
-}
-.contact__message::placeholder {
-  color: white;
 }
 
 .contact__submit {
@@ -366,6 +359,8 @@
 }
 
 .contact__info {
+  width: 100%;
+  max-width: 500px;
   padding: 36px 22px 19px;
 }
 
