--- a/resources/source/css/style.css
+++ b/resources/source/css/style.css
@@ -25,6 +25,12 @@
   letter-spacing: 2.16px;
   color: #000000;
 }
+.header__link:hover {
+  color: #505050;
+}
+.header__link:active {
+  color: #808080;
+}
 
 .header__title {
   max-width: 400px;
@@ -212,13 +218,13 @@
   display: none;
   position: absolute;
   width: calc(100% - 36px);
-  bottom: 0;
-  margin: 0 18px 15px;
+  min-height: 240px;
+  bottom: 15px;
+  margin: 0 18px;
   padding: 37px 50px 37px 37px;
   text-align: left;
   background-color: #eff0f2;
   border: 1px solid #000000;
-  opacity: 0.98;
   -webkit-box-shadow: 2.7000000477px 6.4000000954px 16px 0px rgba(20, 20, 21, 0.1803921569);
           box-shadow: 2.7000000477px 6.4000000954px 16px 0px rgba(20, 20, 21, 0.1803921569);
 }
@@ -249,7 +255,7 @@
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.16px;
-  margin-bottom: 24px;
+  margin-bottom: 10px;
 }
 
 .employee__links {
@@ -259,10 +265,33 @@
   -webkit-box-pack: left;
       -ms-flex-pack: left;
           justify-content: left;
-  gap: 33px;
+  gap: 13px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.employee__links li {
+  width: 46px;
+  height: 40px;
+}
+.employee__links li:hover {
+  background-color: #6eeee4;
+}
+.employee__links li:active {
+  background-color: #505050;
+}
+.employee__links li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .contact *,
@@ -424,6 +453,19 @@
 }
 
 .footer__links > li {
+  width: 46px;
+  height: 40px;
+  background-color: #614a7c;
+  opacity: 0.7;
+}
+.footer__links > li:hover {
+  background-color: #6eeee4;
+  opacity: 1;
+}
+.footer__links > li:active svg {
+  fill: #000000;
+}
+.footer__links > li a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -433,19 +475,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 46px;
-  height: 40px;
-  background-color: #614a7c;
-  opacity: 0.7;
-}
-.footer__links > li:hover {
-  opacity: 1;
-}
-.footer__links > li:active {
-  background-color: #6eeee4;
-}
-.footer__links > li:active svg {
-  fill: #000000;
+  width: 100%;
+  height: 100%;
 }
 
 .footer__links > li svg {
