--- a/resources/source/scss/style.scss
+++ b/resources/source/scss/style.scss
@@ -4,6 +4,8 @@
 
 $light-color: #eff0f2;
 $dark-color: #505050;
+$purple-color: #68478d;
+$cyan-color: #6eeee4;
 
 * {
     font-family: "Montserrat", sans-serif;
@@ -28,6 +30,14 @@ $dark-color: #505050;
     font-size: 18px;
     letter-spacing: 2.16px;
     color: #000000;
+
+    &:hover {
+        color: $dark-color;
+    }
+
+    &:active {
+        color: #808080;
+    }
 }
 
 .header__title {
@@ -70,7 +80,7 @@ $dark-color: #505050;
 }
 
 .header__company {
-    background-color: #68478d;
+    background-color: $purple-color;
     color: #ffffff;
     padding: 2.5px 7.5px;
 }
@@ -204,16 +214,18 @@ $dark-color: #505050;
 }
 
 .employee__about {
+    $margin-x: 18px;
+
     display: none;
     position: absolute;
-    width: calc(100% - 36px);
-    bottom: 0;
-    margin: 0 18px 15px;
+    width: calc(100% - $margin-x * 2);
+    min-height: 240px;
+    bottom: 15px;
+    margin: 0 $margin-x;
     padding: 37px 50px 37px 37px;
     text-align: left;
     background-color: $light-color;
     border: 1px solid #000000;
-    opacity: 0.98;
     box-shadow: 2.700000047683716px 6.400000095367432px 16px 0px #1414152e;
 }
 
@@ -243,14 +255,35 @@ $dark-color: #505050;
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.16px;
-    margin-bottom: 24px;
+    margin-bottom: 10px;
 }
 
 .employee__links {
     display: flex;
     justify-content: left;
-    gap: 33px;
+    gap: 13px;
     align-items: center;
+
+    li {
+        width: 46px;
+        height: 40px;
+
+        &:hover {
+            background-color: $cyan-color;
+        }
+
+        &:active {
+            background-color: $dark-color;
+        }
+    }
+
+    li a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .contact *,
@@ -325,7 +358,7 @@ $dark-color: #505050;
     text-transform: uppercase;
     width: 244px;
     height: 53px;
-    background-color: #6eeee4;
+    background-color: $cyan-color;
     border-radius: 1px;
 
     &:hover {
@@ -357,7 +390,7 @@ $dark-color: #505050;
 
 .footer {
     padding: 93px 0 152px;
-    background-color: #68478d;
+    background-color: $purple-color;
     text-align: center;
 }
 
@@ -383,24 +416,28 @@ $dark-color: #505050;
 }
 
 .footer__links > li {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 46px;
     height: 40px;
     background-color: #614a7c;
     opacity: 0.7;
 
     &:hover {
+        background-color: $cyan-color;
         opacity: 1;
     }
 
     &:active {
-        background-color: #6eeee4;
-
         svg {
             fill: #000000;
         }
+    }
+
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
     }
 }
 
