--- a/resources/source/css/style.css
+++ b/resources/source/css/style.css
@@ -14,12 +14,12 @@
   position: relative;
   max-width: 1440px;
   margin: 0 auto;
-  padding-top: 43px;
+  padding: 45px 0 80px;
 }
 
 .header__link {
   position: absolute;
-  right: 59px;
+  right: 60px;
   text-decoration: underline;
   font-size: 18px;
   letter-spacing: 2.16px;
@@ -67,7 +67,7 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin: 0 auto;
-  padding: 63px 0 81px;
+  padding: 63px 0 0;
 }
 .header__logos img {
   height: 89px;
@@ -112,6 +112,7 @@
 }
 
 .about__samples {
+  width: 80%;
   max-width: 1080px;
   margin: 70px auto;
 }
@@ -334,6 +335,7 @@
 .contact__input,
 .contact__message {
   display: block;
+  padding: 0 3px;
   background-color: transparent;
   width: 100%;
   font-size: 15px;
@@ -406,7 +408,7 @@
 .contact__info {
   width: 100%;
   max-width: 500px;
-  padding: 36px 22px 19px;
+  padding: 35px 22px 20px;
 }
 
 .contact__line {
@@ -428,6 +430,7 @@
 }
 
 .footer__container {
+  max-width: 1440px;
   margin: 0 auto;
 }
 
