Add admin page content

--- a/resources/source/scss/admin.scss
+++ b/resources/source/scss/admin.scss
@@ -41,3 +41,34 @@
     margin: 30px 0 50px;
     background-color: #505050;
 }
+
+.main__list {
+    margin: 0;
+    width: 100%;
+    max-width: 500px;
+}
+
+.main__employee {
+    margin: 20px auto;
+    padding: 13px 20px;
+    border: 1px solid #505050;
+    border-radius: 4px;
+}
+
+.main__name {
+    font-size: 18px;
+    line-height: 26px;
+}
+
+.footer__container {
+    max-width: 1080px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 321px 20px 50px;
+}
+
+.footer__copyright {
+    font-size: 16px;
+    line-height: 25px;
+    letter-spacing: 0.16px;
+}
