Add form for create person

--- a/resources/source/css/admin.css
+++ b/resources/source/css/admin.css
@@ -1,6 +1,23 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700;1,800&display=swap");
 * {
   font-family: "Montserrat", sans-serif;
+}
+
+.main__add-person,
+.form__browse,
+.form__save {
+  background-color: #001871;
+  border: none;
+}
+.main__add-person:hover,
+.form__browse:hover,
+.form__save:hover {
+  background-color: #4b71fe;
+}
+.main__add-person:active,
+.form__browse:active,
+.form__save:active {
+  background-color: #002eda;
 }
 
 .nav__container {
@@ -16,7 +33,7 @@
       -ms-flex-align: center;
           align-items: center;
   margin: 0 auto;
-  padding: 15px 20px;
+  padding: 10px 20px;
   background-color: #68478d;
   border-radius: 4px;
 }
@@ -45,6 +62,15 @@
   height: 1px;
   margin: 30px 0 50px;
   background-color: #505050;
+}
+
+.main__add-person {
+  width: 200px;
+  height: 40px;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
 }
 
 .main__list {
@@ -76,4 +102,78 @@
   font-size: 16px;
   line-height: 25px;
   letter-spacing: 0.16px;
+}
+
+.form {
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+  padding: 40px;
+  background-color: #f0f1f3;
+}
+
+.form__title {
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 600;
+}
+
+.form__close {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+}
+
+.form__data {
+  margin-top: 37px;
+}
+.form__data .row {
+  margin-bottom: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 16px;
+  line-height: 24px;
+}
+.form__data .row > .col:first-child {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+.form__data .row > .col:last-child {
+  -webkit-box-flex: 5;
+      -ms-flex: 5;
+          flex: 5;
+}
+.form__data .col {
+  height: 100%;
+}
+.form__data input {
+  font-size: 16px;
+  line-height: 24px;
+  height: 36px;
+}
+.form__data textarea {
+  font-size: 16px;
+  line-height: 24px;
+  height: 118px;
+}
+
+.form__browse {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.form__save {
+  width: 126px;
+  height: 40px;
+  margin-top: 20px;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19.5px;
 }
