--- a/resources/views/admin/admin-panel.html
+++ b/resources/views/admin/admin-panel.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Our team</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../../source/css/zeroing.css">
@@ -24,7 +24,7 @@
             <div class="main__line"></div>
             <div class="main__content d-flex">
                 <div class="main__list">
-                    <button class="btn btn-primary">Add new person</button>
+                    <button class="main__add-person btn btn-primary">Add new person</button>
                     <div class="main__employees">
                         <div class="main__employee row justify-content-between align-items-center">
                             <div class="main__name col-10 p-0">Jessica Alba - CEO</div>
