--- a/resources/views/admin/forms/add-person-form.html
+++ b/resources/views/admin/forms/add-person-form.html
@@ -19,50 +19,52 @@
             <div class="row">
                 <div class="col"><label for="name">Name</label></div>
                 <div class="col">
-                    <input type="text" id="name" class="form__name form-control">
+                    <input type="text" id="name" name="name" class="form__name form-control">
                 </div>
             </div>
             <div class="row">
                 <div class="col"><label for="position">Position</label></div>
                 <div class="col">
-                    <input type="text" id="position" class="form__position form-control">
+                    <input type="text" id="position" name="position" class="form__position form-control">
                 </div>
             </div>
             <div class="row">
                 <div class="col"><label for="description">Description</label></div>
                 <div class="col">
-                    <textarea name="" id="description" class="form__description form-control"></textarea>
+                    <textarea name="" id="description" name="description"
+                        class="form__description form-control"></textarea>
                 </div>
             </div>
             <div class="row">
                 <div class="col"><label for="photo">Photo</label></div>
                 <div class="col">
-                    <div class="input-group">
-                        <input type="text" class="form__photo form-control" placeholder="Choose file">
-                        <button id="photo" class="form__browse btn btn-primary input-group-text">Browse</button>
-                    </div>
+                    <label class="input-group" for="photo">
+                        <span class="form__choose form-control">Choose file</span>
+                        <span class="form__browse input-group-text">Browse</span>
+                        <input type="file" name="photo" id="photo" class="d-none">
+                    </label>
                 </div>
             </div>
             <div class="row">
                 <div class="col"><label for="facebook">Facebook</label></div>
                 <div class="col">
-                    <input type="text" id="facebook" class="form__facebook form-control">
+                    <input type="text" id="facebook" name="facebook" class="form__facebook form-control">
                 </div>
             </div>
             <div class="row">
                 <div class="col"><label for="mail">Mail</label></div>
                 <div class="col">
-                    <input type="text" id="mail" class="form__mail form-control">
+                    <input type="text" id="mail" name="mail" class="form__mail form-control">
                 </div>
             </div>
             <div class="row">
                 <div class="col"><label for="twitter">Twitter</label></div>
                 <div class="col">
-                    <input type="text" id="twitter" class="form__twitter form-control">
+                    <input type="text" id="twitter" name="twitter" class="form__twitter form-control">
                 </div>
             </div>
         </div>
-        <button class="form__save btn btn-primary">Save</button>
+        <button type="submit" class="form__save btn btn-primary">Save</button>
     </form>
 </body>
 
