Fix browse button right radius

--- a/resources/views/admin/forms/add-person-form.html
+++ b/resources/views/admin/forms/add-person-form.html
@@ -40,7 +40,9 @@
                 <div class="col">
                     <label class="input-group" for="photo">
                         <span class="form__choose form-control">Choose file</span>
-                        <span class="form__browse input-group-text">Browse</span>
+                        <span>
+                            <label for="photo" class="form__browse btn btn-primary">Browse</label>
+                        </span>
                         <input type="file" name="photo" id="photo" class="d-none">
                     </label>
                 </div>
