--- a/resources/views/admin/admin-panel.html
+++ b/resources/views/admin/admin-panel.html
@@ -22,30 +22,28 @@
         <div class="main__container">
             <h1 class="main__title">Our Team</h1>
             <div class="main__line"></div>
-            <div class="main__content d-flex">
-                <div class="main__list">
-                    <button class="main__add-person btn btn-primary">Add new person</button>
-                    <div class="main__employees">
-                        <div class="main__employee row justify-content-between align-items-center">
-                            <div class="main__name col-10 p-0">Jessica Alba - CEO</div>
-                            <div class="col text-end p-0">
-                                <img src="../../images/admin/edit.svg" alt="Edit">
-                                <img src="../../images/admin/delete.svg" alt="Delete">
-                            </div>
+            <div class="main__list">
+                <button class="main__add-person btn btn-primary">Add new person</button>
+                <div class="main__employees">
+                    <div class="main__employee row justify-content-between align-items-center">
+                        <div class="main__name col-10 p-0">Jessica Alba - CEO</div>
+                        <div class="col text-end p-0">
+                            <img src="../../images/admin/edit.svg" alt="Edit">
+                            <img src="../../images/admin/delete.svg" alt="Delete">
                         </div>
-                        <div class="main__employee row justify-content-between align-items-center">
-                            <div class="main__name col-10 p-0">Al Rayhan - Ul Designer</div>
-                            <div class="col text-end p-0">
-                                <img src="../../images/admin/edit.svg" alt="Edit">
-                                <img src="../../images/admin/delete.svg" alt="Delete">
-                            </div>
+                    </div>
+                    <div class="main__employee row justify-content-between align-items-center">
+                        <div class="main__name col-10 p-0">Al Rayhan - Ul Designer</div>
+                        <div class="col text-end p-0">
+                            <img src="../../images/admin/edit.svg" alt="Edit">
+                            <img src="../../images/admin/delete.svg" alt="Delete">
                         </div>
-                        <div class="main__employee row justify-content-between align-items-center">
-                            <div class="main__name col-10 p-0">Jamal Hammer - Junior</div>
-                            <div class="col text-end p-0">
-                                <img src="../../images/admin/edit.svg" alt="Edit">
-                                <img src="../../images/admin/delete.svg" alt="Delete">
-                            </div>
+                    </div>
+                    <div class="main__employee row justify-content-between align-items-center">
+                        <div class="main__name col-10 p-0">Jamal Hammer - Junior</div>
+                        <div class="col text-end p-0">
+                            <img src="../../images/admin/edit.svg" alt="Edit">
+                            <img src="../../images/admin/delete.svg" alt="Delete">
                         </div>
                     </div>
                 </div>
@@ -54,7 +52,7 @@
     </main>
     <footer class="footer">
         <div class="footer__container">
-            <p class="footer__copyright">© PerfectLine</p>
+            <p class="footer__copyright m-0">© PerfectLine</p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
