--- a/resources/views/admin/forms/add-person-form.html
+++ b/resources/views/admin/forms/add-person-form.html
@@ -12,62 +12,65 @@
 </head>
 
 <body>
-    <form action="" class="form">
-        <h2 class="form__title">Create person</h2>
-        <img src="/resources/images/admin/cross.svg" alt="Close form" class="form__close">
-        <div class="form__data">
-            <div class="row">
-                <div class="col"><label for="name">Name</label></div>
-                <div class="col">
-                    <input type="text" id="name" name="name" class="form__name form-control">
+    <div class="d-flex justify-content-center align-items-center min-vh-100 vw-100">
+        <form action="" class="form">
+            <h1 class="form__title">Create person</h1>
+            <img src="/resources/images/admin/cross.svg" alt="Close form" class="form__close">
+            <div class="form__data">
+                <div class="row">
+                    <div class="col"><label for="name">Name</label></div>
+                    <div class="col">
+                        <input type="text" id="name" name="name" class="form__name form-control">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col"><label for="position">Position</label></div>
+                    <div class="col">
+                        <input type="text" id="position" name="position" class="form__position form-control">
+                    </div>
+                </div>
+                <div class="row form__row-description">
+                    <div class="col"><label for="description">Description</label></div>
+                    <div class="col">
+                        <textarea name="" id="description" name="description"
+                            class="form__description form-control"></textarea>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col"><label for="photo">Photo</label></div>
+                    <div class="col">
+                        <label class="input-group" for="photo">
+                            <span class="form__choose form-control">Choose file</span>
+                            <span>
+                                <label for="photo" class="form__browse btn btn-primary">Browse</label>
+                            </span>
+                            <input type="file" name="photo" id="photo" class="d-none">
+                        </label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col"><label for="facebook">Facebook</label></div>
+                    <div class="col">
+                        <input type="text" id="facebook" name="facebook" class="form__facebook form-control">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col"><label for="mail">Mail</label></div>
+                    <div class="col">
+                        <input type="text" id="mail" name="mail" class="form__mail form-control">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col"><label for="twitter">Twitter</label></div>
+                    <div class="col">
+                        <input type="text" id="twitter" name="twitter" class="form__twitter form-control">
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col"><label for="position">Position</label></div>
-                <div class="col">
-                    <input type="text" id="position" name="position" class="form__position form-control">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col"><label for="description">Description</label></div>
-                <div class="col">
-                    <textarea name="" id="description" name="description"
-                        class="form__description form-control"></textarea>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col"><label for="photo">Photo</label></div>
-                <div class="col">
-                    <label class="input-group" for="photo">
-                        <span class="form__choose form-control">Choose file</span>
-                        <span>
-                            <label for="photo" class="form__browse btn btn-primary">Browse</label>
-                        </span>
-                        <input type="file" name="photo" id="photo" class="d-none">
-                    </label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col"><label for="facebook">Facebook</label></div>
-                <div class="col">
-                    <input type="text" id="facebook" name="facebook" class="form__facebook form-control">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col"><label for="mail">Mail</label></div>
-                <div class="col">
-                    <input type="text" id="mail" name="mail" class="form__mail form-control">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col"><label for="twitter">Twitter</label></div>
-                <div class="col">
-                    <input type="text" id="twitter" name="twitter" class="form__twitter form-control">
-                </div>
-            </div>
-        </div>
-        <button type="submit" class="form__save btn btn-primary">Save</button>
-    </form>
+            <button type="submit" class="form__save btn btn-primary">Save</button>
+            <p class="form__copyright mb-0">© PerfectLine</p>
+        </form>
+    </div>
 </body>
 
 </html>
