--- a/resources/source/scss/admin.scss
+++ b/resources/source/scss/admin.scss
@@ -41,7 +41,7 @@
 .main__container {
     width: 100%;
     max-width: 1080px;
-    margin: 0 auto;
+    margin: 0 auto 271px;
     padding: 30px 20px 50px;
 }
 
@@ -89,7 +89,7 @@
     max-width: 1080px;
     margin: 0 auto;
     text-align: center;
-    padding: 321px 20px 50px;
+    padding: 50px 20px;
 }
 
 .footer__copyright {
@@ -98,7 +98,17 @@
     letter-spacing: 0.16px;
 }
 
-.form {
+.person {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 1080px;
+    padding: 30px 20px 0;
+    margin: 0 auto;
+}
+
+.person__form {
     position: relative;
     width: 100%;
     max-width: 500px;
@@ -126,7 +136,7 @@
     margin-top: 37px;
 
     .row {
-        margin-bottom: 20px;
+        margin: 0 0 20px;
         align-items: center;
         font-size: 16px;
         line-height: 24px;
@@ -150,6 +160,7 @@
 
     .col {
         height: 100%;
+        padding: 0;
     }
 
     input {
@@ -158,7 +169,8 @@
         height: 36px;
     }
 
-    textarea {
+    .form__description {
+        padding: 15px;
         font-size: 16px;
         line-height: 24px;
         height: 118px;
@@ -169,6 +181,7 @@
     font-weight: 600;
     font-size: 16px;
     line-height: 24px;
+    border: 1px solid #ced4da;
     border-radius: 0 4px 4px 0;
 }
 
